--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+php-java-bridge (5.5-1) unstable; urgency=low
+
+  * New upstream version.
+  * dependency on php-pear and its PHPDoc.
+  * improved dependency control (rules and control files).
+
+ -- Andre Felipe Machado <andremachado@techforce.com.br>  Tue, 29 Jul 2009 17:44:32 -0300
+
+
 php-java-bridge (5.4.4.2-3) unstable; urgency=low
 
   * SELinux EXPERIMENTAL packaging.
