--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
 php-java-bridge (5.5-1) unstable; urgency=low
 
   * New upstream version.
-  * dependency on php-pear and its PHPDoc.
+  * build dependency on php-pear.
   * improved dependency control (rules and control files).
+  * build dependency on PhpDocumentor (manually installed by php-pear)
 
- -- Andre Felipe Machado <andremachado@techforce.com.br>  Tue, 29 Jul 2009 17:44:32 -0300
+ -- Andre Felipe Machado <andremachado@techforce.com.br>  Fri, 07 Aug 2009 15:20:18 -0300
 
 
 php-java-bridge (5.4.4.2-3) unstable; urgency=low
