--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+php-java-bridge (5.5.1-1) unstable; urgency=low
+
+  * New upstream version.
+  * SE Linux Debian patch is not needed anymore.
+
+ -- Andre Felipe Machado <andremachado@techforce.com.br>  Fri, 31 Aug 2009 12:05:43 -0300
+
+php-java-bridge (5.5-2) unstable; urgency=low
+
+  * Correction of SE Linux Debian patch for right bridge version.
+
+ -- Andre Felipe Machado <andremachado@techforce.com.br>  Fri, 31 Aug 2009 11:32:15 -0300
+
+
 php-java-bridge (5.5-1) unstable; urgency=low
 
   * New upstream version.
