--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+php-java-bridge (6.1.1-2) unstable; urgency=low
+
+  * Corrections at control file, removing deprecated packages.
+  * Files clean up.
+
+ -- Andre Felipe Machado <andre.machado@serpro.gov.br>  Mon, 06 Apr 2010 14:34:35 -0300
+
+
+
 php-java-bridge (6.1.1-1) unstable; urgency=low
 
   * New upstream version.
